    Because of the required changes, TV effects were removed (they will
    be added again for the next release).

  * Improvements to audio handling, particularly for certain cases of
    Windows, ATI video cards, and OpenGL mode.  The sound device is now
    opened only once when Stella starts, and is paused between loading
    different ROMs.  This fixes a problem whereby sound could possibly
    not be functional after loading the first ROM.

  * Added logging facility, whereby the output of the application is
    available within Stella itself.  This can still be printed to the
    console, or also saved to a file.  Add the 'loglevel' and
    'logtoconsole' commandline arguments which control these settings,
    and removed the 'showinfo' argument as it's now redundant.

  * Updated DPC+ bankswitching scheme to latest code provided by
    SpiceWare.

  * Added MAMCR handling to the Thumb ARM emulation code.  Note that
    MAMCR isn't actually emulated, it is just ignored for now.  This
    fixes a bug whereby accessing MAMCR would crash the ARM emulation.

  * Added 'thumb.trapfatal' commandline argument, which causes the
    Thumb ARM emulation to either trap on a fatal error (throw an
    exception to the debugger and exit emulation) or simply log the
    error and continue.  This should normally always be enabled, but
    can be disabled by developers for testing reasons.

  * Updated default snapshot directory to be much saner and easier to
    find.  For most systems, it now defaults to the users 'Desktop'.
    Note that the commandline argument has changed to 'snapdir'.

  * The debugger 'print' command now indicates "special" addresses if
    they are read-only (R), write-only (W) or read-write (R/W).

  * Fixed a bug where scrolling the mouse-wheel in certain debugger UI
    items would cause the program to crash; scrolling now works as
    expected.

  * Fixed compile issues in the latest versions of Ubuntu and Debian, and